Fixed the layout issues post merge.

--- a/src/stylesheets/buttons.scss
+++ b/src/stylesheets/buttons.scss
@@ -44,6 +44,7 @@
     p {
       display: inline-block;
       font-weight: 100;
+      font-size: 24px;
       margin: 0;
       padding-left: 10px;
     }
